Fix connection string

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mongodb://user_ragasa_root:6227ddec70055809aad1f827@cluster0-shard-00-00.jcxk5.mongodb.net:27017,cluster0-shard-00-01.jcxk5.mongodb.net:27017,cluster0-shard-00-02.jcxk5.mongodb.net:27017/test?replicaSet=atlas-vx5bz9-shard-0&ssl=true&authSource=admin'
+DATABASE_URL='mongodb://user_ragasa_root:6227ddec70055809aad1f827@cluster0-shard-00-00.jcxk5.mongodb.net:27017,cluster0-shard-00-01.jcxk5.mongodb.net:27017,cluster0-shard-00-02.jcxk5.mongodb.net:27017/todo_ragasa?replicaSet=atlas-vx5bz9-shard-0&ssl=true&authSource=admin'
